# COMtext.SR-pseudonymizer

./: LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  test.py
src/comtext_sr_pseudonymizer/: __init__.py  constants.py  data_manager.py  data_paths.py  io_helper.py  lex.py  main.py  patterns.py
src/comtext_sr_pseudonymizer/data/: srlex_filtered.tsv
src/comtext_sr_pseudonymizer/data/lookup/: city_lookup.txt  country_lookup.txt  municipality_lookup.txt  per_female_lookup.txt  per_male_lookup.txt  per_surname_lookup.txt
src/comtext_sr_pseudonymizer/data/replacement/: adr_street_pool.tsv  adr_zip_pool.tsv  com_company_pool.tsv  idcom_company_pool.tsv  idcom_ngo_pool.tsv  orgoth_ngo_pool.tsv  per_female_pool.tsv  per_male_pool.tsv  per_surname_pool.tsv  top_city_pool.tsv  top_municipality_pool.tsv
src/comtext_sr_pseudonymizer/entities/: __init__.py  adr.py  base_anonymizer.py  com.py  contact.py  corporate_base.py  court.py  date.py  entity_schema.py  idcom.py  idper.py  idtax.py  money.py  numacc.py  numcar.py  numdoc.py  numplot.py  orgoth.py  per.py  top.py
src/comtext_sr_pseudonymizer/entities/helpers/: __init__.py  address_parser.py
